--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light">
         <a class="navbar-brand" href="#">
-            <img src="imageofabout/logo.png" alt="Library Logo" style="height:50px;">
+            <img src="image/logo.webp" alt="Library Logo" style="height:50px;">
         </a>
         <div class="search-bar">
             <input type="text" class="form-control" placeholder="Tìm kiếm sách, tác giả...">
@@ -61,7 +61,7 @@
         <div class="team-container">
             <!-- Team Member Card -->
             <div class="team-card">
-                <img src="imageofabout/letuanphat.png" alt="Lê Tuấn Phát">
+                <img src="image/letuanphat.png" alt="Lê Tuấn Phát">
                 <h3>Lê Tuấn Phát</h3>
                 <p class="role">Leader</p>
                 <p>Student ID: 21129858</p>
@@ -85,7 +85,7 @@
             </div>
             <!-- Repeat the structure for other members -->
             <div class="team-card">
-                <img src="imageofabout/manguyenvu.png" alt="Ma Nguyên Vũ">
+                <img src="image/manguyenvu.png" alt="Ma Nguyên Vũ">
                 <h3>Ma Nguyên Vũ</h3>
                 <p class="role">Member</p>
                 <p>Student ID: 23130388</p>
@@ -108,7 +108,7 @@
                 </div>
             </div>
             <div class="team-card">
-                <img src="imageofabout/huuthuc.png" alt="Huỳnh Hữu Thức">
+                <img src="image/huuthuc.png" alt="Huỳnh Hữu Thức">
                 <h3>Huỳnh Hữu Thức</h3>
                 <p class="role">Member</p>
                 <p>Student ID: 23130323</p>
@@ -131,7 +131,7 @@
                 </div>
             </div>
             <div class="team-card">
-                <img src="imageofabout/ngoctan.png" alt="Trần Ngọc Tân">
+                <img src="image/ngoctan.png" alt="Trần Ngọc Tân">
                 <h3>Trần Ngọc Tân</h3>
                 <p class="role">Member</p>
                 <p>Student ID: 22130247</p>
@@ -154,7 +154,7 @@
                 </div>
             </div>
             <div class="team-card">
-                <img src="imageofabout/phinguyen.png" alt="Nguyễn Phi">
+                <img src="image/phinguyen.png" alt="Nguyễn Phi">
                 <h3>Nguyễn Phi</h3>
                 <p class="role">Member</p>
                 <p>Student ID: 22130209</p>
