--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <title>Library Manager</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="about.css">
+    <link rel="stylesheet" href="css/about.css">
     
 </head>
 
@@ -30,7 +30,7 @@
     <div class="tab-section">
         <ul class="nav nav-pills">
             <li class="nav-item">
-                <a class="nav-link" href="#">Home</a>
+                <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="genreDropdown" role="button" data-toggle="dropdown"
