--- a/login.html
+++ b/login.html
@@ -11,11 +11,11 @@
 		<h2>Login</h2>
 		<div class="input-field">
 			<i class="fa fa-user"></i> 
-			<input type="text" placeholder="Username or Email">
+			<input type="text" id="username" placeholder="Username or Email">
 		</div>
 		<div class="input-field">
 			<i class="fa fa-lock"></i> 
-			<input type="password" placeholder="Password">
+			<input type="password" id="password" placeholder="Password">
 		</div>
 		<div class="options">
 			<label><input type="checkbox"> Remember me</label> 
@@ -27,7 +27,6 @@
 		</p>
 	</div>
 
-	<script src="js/login.js">
-	</script>
+	<script src="js/login.js"></script>
 </body>
 </html>
