--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 </div>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
+                <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Policy</a>
