--- a/about.html
+++ b/about.html
@@ -45,13 +45,13 @@
                 </div>
             </li>
             <li class="nav-item">
-                <a class="nav-link active" href="#">About</a>
+                <a class="nav-link active" href="about.html">About</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Policy</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
+                <a class="nav-link" href="contact.html">Contact</a>
             </li>
         </ul>
     </div>
