--- a/contact.html
+++ b/contact.html
@@ -11,8 +11,8 @@
     <link rel="stylesheet" href="css/contact.css">
 </head>
 <body>
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light">
+     <!-- Navbar -->
+     <nav class="navbar navbar-expand-lg navbar-light">
         <a class="navbar-brand" href="#">
             <img src="image/logo.webp" alt="Library Logo" style="height:50px;">
         </a>
@@ -23,13 +23,13 @@
             </button>
         </div>
         <a href="login.html" class="btn btn-primary ml-3">Login</a>
-    </nav>  
+    </nav>
 
     <!-- Tabs Section -->
     <div class="tab-section">
         <ul class="nav nav-pills">
             <li class="nav-item">
-                <a class="nav-link" href="index.html">Home</a>
+                <a class="nav-link " href="index.html">Home</a>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="genreDropdown" role="button" data-toggle="dropdown"
@@ -44,13 +44,13 @@
                 </div>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
+                <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Policy</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link active" href="contact.html">Contact</a>
+                <a class="nav-link active"  href="contact.html">Contact</a>
             </li>
         </ul>
     </div>
