Update about.html logo

--- a/about.html
+++ b/about.html
@@ -183,7 +183,7 @@
         <div class="container">
             <div class="row footer-section">
                 <div class="col-md-4 footer-logo">
-                    <a href="#"><img src="imageofabout/logo.png" alt="Library Logo"></a>
+                    <a href="#"><img src="image/logo.webp" alt="Library Logo"></a>
                     <p>Your one-stop solution for digital library management.</p>
                 </div>
                 <div class="col-md-4">
