--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 <body>
      <!-- Navbar -->
      <nav class="navbar navbar-expand-lg navbar-light">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="index.html">
             <img src="image/logo.webp" alt="Library Logo" style="height:50px;">
         </a>
         <div class="search-bar">
@@ -47,7 +47,7 @@
                 <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Policy</a>
+                <a class="nav-link" href="policy.html">Policy</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link active"  href="contact.html">Contact</a>
