--- a/booksGenere/literature.html
+++ b/booksGenere/literature.html
@@ -71,7 +71,7 @@
                                     <div class="row g-0">
                                         <!-- Image -->
                                         <div class="col-md-6">
-                                            <img src="../image/category/space.png" class="d-block w-100" alt="The Great Gatsby">
+                                            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRHF3lLOKwzq5pB1DAXuvHovgmQAnQ7YD8CFQ&s" class="d-block w-100" alt="The Great Gatsby">
                                         </div>
                                         <!-- Description -->
                                         <div class="col-md-6 description">
@@ -98,7 +98,7 @@
                                     <div class="row g-0">
                                         <!-- Image -->
                                         <div class="col-md-6">
-                                            <img src="../image/category/nature.png" class="d-block w-100" alt="1984">
+                                            <img src="https://cdn11.bigcommerce.com/s-hvyeu5c5mp/images/stencil/1280x1280/products/286/562/ADU-NL1__90162.1633990021.jpg?c=1" class="d-block w-100" alt="1984">
                                         </div>
                                         <!-- Description -->
                                         <div class="col-md-6 description">
@@ -125,7 +125,7 @@
                                     <div class="row g-0">
                                         <!-- Image -->
                                         <div class="col-md-6">
-                                            <img src="../image/category/geometry.png" class="d-block w-100" alt="Pride and Prejudice">
+                                            <img src="https://m.media-amazon.com/images/I/51hZ-LLWMNL._AC_UF1000,1000_QL80_.jpg" class="d-block w-100" alt="Pride and Prejudice">
                                         </div>
                                         <!-- Description -->
                                         <div class="col-md-6 description">
@@ -172,7 +172,6 @@
                 <div class="modal-body">
                     <div class="modal-image">
                         <img id="modalImage" src="" alt="" class="modal-image-img">
-                        <img id="modalAltImage" src="" alt="" class="modal-image-img">
                     </div>
                     <div class="modal-details">
                         <h2 id="modalTitle" class="modal-title"></h2>
@@ -180,7 +179,7 @@
                         <p id="modalDescription" class="modal-description"></p>
                         <div class="modal-actions">
                             <button id="cancelButton" class="btn btn-secondary">Cancel</button>
-                            <button id="addToCartButton" class="btn btn-primary">Add to Cart</button>
+                            <span id="modalBadge" class="badge"></span>
                         </div>
                     </div>
                 </div>
