--- a/booksGenere/history.html
+++ b/booksGenere/history.html
@@ -71,7 +71,7 @@
                                 <div class="row g-0">
                                     <!-- Image -->
                                     <div class="col-md-6">
-                                        <img src="../image/category/space.png" class="d-block w-100" alt="The Great Gatsby">
+                                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRHF3lLOKwzq5pB1DAXuvHovgmQAnQ7YD8CFQ&s" class="d-block w-100" alt="The Great Gatsby">
                                     </div>
                                     <!-- Description -->
                                     <div class="col-md-6 description">
@@ -98,7 +98,7 @@
                                 <div class="row g-0">
                                     <!-- Image -->
                                     <div class="col-md-6">
-                                        <img src="../image/category/nature.png" class="d-block w-100" alt="1984">
+                                        <img src="https://cdn11.bigcommerce.com/s-hvyeu5c5mp/images/stencil/1280x1280/products/286/562/ADU-NL1__90162.1633990021.jpg?c=1" class="d-block w-100" alt="1984">
                                     </div>
                                     <!-- Description -->
                                     <div class="col-md-6 description">
@@ -125,7 +125,7 @@
                                 <div class="row g-0">
                                     <!-- Image -->
                                     <div class="col-md-6">
-                                        <img src="../image/category/geometry.png" class="d-block w-100" alt="Pride and Prejudice">
+                                        <img src="https://m.media-amazon.com/images/I/51hZ-LLWMNL._AC_UF1000,1000_QL80_.jpg" class="d-block w-100" alt="Pride and Prejudice">
                                     </div>
                                     <!-- Description -->
                                     <div class="col-md-6 description">
@@ -164,26 +164,25 @@
             <!-- Dynamic Book Cards will be inserted here -->
         </div>
     </div>
-            <!-- Modal -->
-            <div id="bookModal" class="modal">
-                <div class="modal-content">
-                    <span class="close">&times;</span>
-                    <div class="modal-body">
-                        <div class="modal-image">
-                            <img id="modalImage" src="" alt="Book Cover">
-                        </div>
-                        <div class="modal-details">
-                            <h2 id="modalTitle"></h2>
-                            <h4 id="modalAuthor"></h4>
-                            <p id="modalDescription"></p>
-                            <div class="modal-actions">
-                                <button class="btn btn-secondary" id="cancelButton">Cancel</button>
-                                <button class="btn btn-primary" id="addToCartButton">Add to Cart</button>
-                            </div>
-                        </div>
+    <div id="bookModal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <div class="modal-body">
+                <div class="modal-image">
+                    <img id="modalImage" src="" alt="" class="modal-image-img">
+                </div>
+                <div class="modal-details">
+                    <h2 id="modalTitle" class="modal-title"></h2>
+                    <p id="modalAuthor" class="modal-author"></p>
+                    <p id="modalDescription" class="modal-description"></p>
+                    <div class="modal-actions">
+                        <button id="cancelButton" class="btn btn-secondary">Cancel</button>
+                        <span id="modalBadge" class="badge"></span>
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
 
     <div class="section-header">
         <h1>Explore Other Book Genres</h1>
