add listcategory.html and locationlibrary.html in admin

--- a/admin.html
+++ b/admin.html
@@ -24,12 +24,13 @@
   <!-- Sidebar -->
   <div class="sidebar">
     <h3 class="text-center py-3">Admin Panel</h3>
-    <a href="#control-table" class="active">Control Table</a>
-    <a href="#category">Category</a>
-    <a href="#location">Location</a>
-    <a href="#list-book">List Book</a>
-    <a href="#borrowed-books">Borrowed Books</a>
-    <a href="#borrowers">Borrowers</a>
+    <a href="admin.html" class="active">Control Table</a>
+    <a href="listcategory.html">Category</a>
+    <a href="locationlibrary.html">Location of libraries</a>
+    <a href="listBook.html">List Book</a>
+    <a href="#borrowed-books">Books Borrowed</a>
+    <a href="#borrowers">Books Returned</a>
+    <a href="login.html">Logout</a>
   </div>
 
   <!-- Content -->
