--- a/category.html
+++ b/category.html
@@ -15,7 +15,7 @@
             <img src="image/logo.webp" alt="Library Logo" style="height:50px;">
         </a>
         <div class="search-bar">
-            <input type="text" class="form-control" placeholder="Tìm kiếm sách, tác giả...">
+            <input type="text" class="form-control" placeholder="Searching book, author...">
             <button class="btn-search">
                 <i class="fa fa-search"></i>
             </button>
@@ -33,10 +33,14 @@
                     Category
                 </a>
                 <div class="dropdown-menu" aria-labelledby="genreDropdown">
-                    <a class="dropdown-item" href="booksGenere/literature.html">Văn học</a>
-                    <a class="dropdown-item" href="booksGenere/science.html">Khoa học</a>
-                    <a class="dropdown-item" href="booksGenere/history.html">Lịch sử</a>
-                    <a class="dropdown-item" href="booksGenere/children.html">Thiếu nhi</a>
+                    <a class="dropdown-item" href="booksGenere/literature.html">Literature</a>
+                    <a class="dropdown-item" href="booksGenere/science.html">Science</a>
+                    <a class="dropdown-item" href="booksGenere/history.html">History</a>
+                    <a class="dropdown-item" href="booksGenere/children.html">Children</a>
+                    <a class="dropdown-item" href="booksGenere/mentality.html">Mentality</a>
+                    <a class="dropdown-item" href="booksGenere/economy.html">Economy</a>
+                    <a class="dropdown-item" href="booksGenere/lifeskills.html">Life Skills</a>
+                    <a class="dropdown-item" href="booksGenere/sport.html">Sport</a>
                 </div>
             </li>
             <li class="nav-item">
@@ -257,9 +261,12 @@
     </footer>
 
     <!-- JavaScript -->
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.0.7/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+   <!-- Bootstrap JS and dependencies -->
+   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+   <!-- Font Awesome for icons -->
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/js/all.min.js"></script>
     <script src="js/category.js"></script>
 </body>
 </html>
