--- a/admin.html
+++ b/admin.html
@@ -29,7 +29,7 @@
     <a href="locationlibrary.html">Location of libraries</a>
     <a href="listBook.html">List Book</a>
     <a href="#borrowed-books">Books Borrowed</a>
-    <a href="#borrowers">Books Returned</a>
+    <a href="booksRetuned.html">Books Returned</a>
     <a href="login.html">Logout</a>
   </div>
 
