--- a/listBook.html
+++ b/listBook.html
@@ -14,7 +14,7 @@
 <body>
 
   <!-- Header -->
-  <div class="header">
+  <div class="header d-flex justify-content-between py-3">
     <div class="left">
       <h5>Trang Admin</h5>
     </div>
@@ -24,11 +24,11 @@
   </div>
 
   <!-- Sidebar -->
-  <div class="sidebar">
-    <h3 class="text-center py-3">Admin Panel</h3>
+  <div class="sidebar d-flex flex-column justify-content-between py-4 px-3">
+    <h3 class="text-center mb-4">Admin Panel</h3>
     <a href="admin.html" >Control Table</a>
     <a href="listcategory.html">Category</a>
-    <a href="locationlibrary.html">Location of libraries</a>
+    <a href="locationlibrary.html">Location of Libraries</a>
     <a href="listBook.html" class="active">List Book</a>
     <a href="#borrowed-books">Books Borrowed</a>
     <a href="booksRetuned.html">Books Returned</a>
