--- a/admin.html
+++ b/admin.html
@@ -7,12 +7,11 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <link rel="stylesheet" href="css/admin.css">
- 
 </head>
 <body>
 
   <!-- Header -->
-  <div class="header">
+  <div class="header d-flex justify-content-between py-3">
     <div class="left">
       <h5>Trang Admin</h5>
     </div>
@@ -22,11 +21,11 @@
   </div>
 
   <!-- Sidebar -->
-  <div class="sidebar">
-    <h3 class="text-center py-3">Admin Panel</h3>
+  <div class="sidebar d-flex flex-column justify-content-between py-4 px-3">
+    <h3 class="text-center mb-4">Admin Panel</h3>
     <a href="admin.html" class="active">Control Table</a>
     <a href="listcategory.html">Category</a>
-    <a href="locationlibrary.html">Location of libraries</a>
+    <a href="locationlibrary.html">Location of Libraries</a>
     <a href="listBook.html">List Book</a>
     <a href="#borrowed-books">Books Borrowed</a>
     <a href="booksRetuned.html">Books Returned</a>
@@ -34,53 +33,63 @@
   </div>
 
   <!-- Content -->
-  <div class="content">
+  <div class="content d-flex flex-column justify-content-start">
+    
     <!-- Breadcrumb -->
-    <nav class="breadcrumb">
+    <nav class="breadcrumb py-3">
       <span>Admin</span> / <span>Control Table</span>
     </nav>
 
-    <!-- Stats -->
-    <div class="stats">
-      <!-- Books Returned -->
-      <div class="stat-card">
-        <h4>Books Returned</h4>
-        <div class="stat-section">
-          <strong>Today:</strong> 80
-        </div>
-        <div class="stat-section">
-          <strong>This Month:</strong> 3100
-        </div>
-        <div class="stat-section">
-          <strong>This Year:</strong> 36500
-        </div>
-      </div>
-
+    <!-- Stats - Left Side (Books Borrowed and Returned) -->
+    <div class="row gx-5">
       <!-- Books Borrowed -->
-      <div class="stat-card">
-        <h4>Books Borrowed</h4>
-        <div class="stat-section">
-          <strong>Today:</strong> 120
+      <div class="col-md-6">
+        <div class="stat-card p-4 mb-3 bg-light">
+          <h4>Books Borrowed</h4>
+          <div class="stat-section">
+            <strong>Today:</strong> 120
+          </div>
+          <div class="stat-section">
+            <strong>This Month:</strong> 3500
+          </div>
+          <div class="stat-section">
+            <strong>This Year:</strong> 40000
+          </div>
         </div>
-        <div class="stat-section">
-          <strong>This Month:</strong> 3500
-        </div>
-        <div class="stat-section">
-          <strong>This Year:</strong> 40000
+      </div>
+
+      <!-- Books Returned -->
+      <div class="col-md-6">
+        <div class="stat-card p-4 mb-3 bg-light">
+          <h4>Books Returned</h4>
+          <div class="stat-section">
+            <strong>Today:</strong> 80
+          </div>
+          <div class="stat-section">
+            <strong>This Month:</strong> 3100
+          </div>
+          <div class="stat-section">
+            <strong>This Year:</strong> 36500
+          </div>
         </div>
       </div>
     </div>
 
-    <!-- Charts -->
-    <div class="charts">
-      <h4>Books Borrowed and Returned</h4>
-      <canvas id="borrowedChart" width="400" height="200"></canvas>
-      <canvas id="returnedChart" width="400" height="200" style="margin-top: 20px;"></canvas>
+    <!-- Charts - Right Side -->
+    <div class="row gx-5">
+      <div class="col-md-6">
+        <h4>Books Borrowed and Returned (Chart)</h4>
+        <canvas id="borrowedChart" width="400" height="200"></canvas>
+      </div>
+      <div class="col-md-6">
+        <h4>Books Returned (Chart)</h4>
+        <canvas id="returnedChart" width="400" height="200"></canvas>
+      </div>
     </div>
+    
   </div>
 
-  <script src="js/admin.js">
-  </script>
+  <script src="js/admin.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
