--- a/blog.html
+++ b/blog.html
@@ -72,7 +72,8 @@
                 <div class="blog-post card mb-4">
                     <div class="row">
                         <div class="col-md-4">
-                            <img src="https://tse4.mm.bing.net/th?id=OIP.RKlF5s4sXWvuMkB_1UcAowAAAA&pid=Api&P=0&h=220" class="card-img" alt="Blog Post Image">
+                            <img src="https://tse4.mm.bing.net/th?id=OIP.RKlF5s4sXWvuMkB_1UcAowAAAA&pid=Api&P=0&h=220"
+                                class="card-img" alt="Blog Post Image">
                         </div>
                         <div class="col-md-8">
                             <div class="blog-post-content">
@@ -89,7 +90,8 @@
                 <div class="blog-post card mb-4">
                     <div class="row">
                         <div class="col-md-4">
-                            <img src="https://tse1.mm.bing.net/th?id=OIP.eaAWW4X4xtOBxLGBFvM1MwHaD4&pid=Api&P=0&h=220" class="card-img" alt="Blog Post Image">
+                            <img src="https://tse1.mm.bing.net/th?id=OIP.eaAWW4X4xtOBxLGBFvM1MwHaD4&pid=Api&P=0&h=220"
+                                class="card-img" alt="Blog Post Image">
                         </div>
                         <div class="col-md-8">
                             <div class="blog-post-content">
@@ -105,7 +107,8 @@
                 <div class="blog-post card mb-4">
                     <div class="row">
                         <div class="col-md-4">
-                            <img src="https://tse1.mm.bing.net/th?id=OIP.KptmQZEb53ZaoiM_4v6TWwHaDt&pid=Api&P=0&h=220" class="card-img" alt="Blog Post Image">
+                            <img src="https://tse1.mm.bing.net/th?id=OIP.KptmQZEb53ZaoiM_4v6TWwHaDt&pid=Api&P=0&h=220"
+                                class="card-img" alt="Blog Post Image">
                         </div>
                         <div class="col-md-8">
                             <div class="blog-post-content">
@@ -122,7 +125,8 @@
                 <div class="blog-post card mb-4">
                     <div class="row">
                         <div class="col-md-4">
-                            <img src="https://tse2.mm.bing.net/th?id=OIP.ukmBm8jXXUZi2alMiJUAIwHaDy&pid=Api&P=0&h=220" class="card-img" alt="Blog Post Image">
+                            <img src="https://tse2.mm.bing.net/th?id=OIP.ukmBm8jXXUZi2alMiJUAIwHaDy&pid=Api&P=0&h=220"
+                                class="card-img" alt="Blog Post Image">
                         </div>
                         <div class="col-md-8">
                             <div class="blog-post-content">
@@ -138,7 +142,8 @@
                 <div class="blog-post card mb-4">
                     <div class="row">
                         <div class="col-md-4">
-                            <img src="https://tse4.mm.bing.net/th?id=OIP.3cljoiU-_QMFCXt58QAFxAHaEK&pid=Api&P=0&h=220" class="card-img" alt="Blog Post Image">
+                            <img src="https://tse4.mm.bing.net/th?id=OIP.3cljoiU-_QMFCXt58QAFxAHaEK&pid=Api&P=0&h=220"
+                                class="card-img" alt="Blog Post Image">
                         </div>
                         <div class="col-md-8">
                             <div class="blog-post-content">
@@ -154,7 +159,8 @@
                 <div class="blog-post card mb-4">
                     <div class="row">
                         <div class="col-md-4">
-                            <img src="https://tse3.mm.bing.net/th?id=OIP.LBnVr738j6TbQtbBa_QmfgHaEH&pid=Api&P=0&h=220" class="card-img" alt="Blog Post Image">
+                            <img src="https://tse3.mm.bing.net/th?id=OIP.LBnVr738j6TbQtbBa_QmfgHaEH&pid=Api&P=0&h=220"
+                                class="card-img" alt="Blog Post Image">
                         </div>
                         <div class="col-md-8">
                             <div class="blog-post-content">
@@ -169,62 +175,57 @@
 
             <!-- Sidebar -->
             <div class="col-lg-4">
-                <div >
-                    <!-- Search Widget -->
-                    <div class="card mb-4">
-                        <div class="card-body">
-                            <h4>Search Posts</h4>
-                            <form action="#" method="GET">
-                                <input type="text" class="form-control" placeholder="Search..." name="search">
-                                <button type="submit" class="btn btn-primary mt-3 w-100">
-                                    <i class="fa fa-search"></i> Search
-                                </button>
-                            </form>
-                        </div>
-                    </div>
-                    <!-- Popular Categories -->
-                    <div class="card mb-4">
-                        <div class="card-body">
-                            <h4>Popular Categories</h4>
-                            <ul class="list-unstyled">
-                                <li><a href="booksGenere/literature.html">Literature</a></li>
-                                <li><a href="booksGenere/science.html">Science</a></li>
-                                <li><a href="booksGenere/history.html">History</a></li>
-                                <li><a href="booksGenere/children.html">Children</a></li>
-                                <li><a href="booksGenere/mentality.html">Mentality</a></li>
-                                <li><a href="booksGenere/economy.html">Economy</a></li>
-                                <li><a href="booksGenere/lifeskills.html">Life Skills</a></li>
-                                <li><a href="booksGenere/sport.html">Sport</a></li>
-                            </ul>
-                        </div>
+                <!-- Search Widget -->
+                <div class="card mb-4">
+                    <div class="card-body">
+                        <h4>Search Posts</h4>
+                        <form action="#" method="GET">
+                            <input type="text" class="form-control" placeholder="Search by book, author..."
+                                name="search">
+                            <button type="submit" class="btn btn-primary mt-3 w-100">
+                                <i class="fa fa-search"></i> Search
+                            </button>
+                        </form>
                     </div>
                 </div>
-                <div class="recent-articles card">
-                    <div class="card-header">
-                        <h5 class="card-title">Recent Articles</h5>
-                    </div>
+
+                <!-- Popular Categories -->
+                <div class="card mb-4">
                     <div class="card-body">
+                        <h4>Popular Categories</h4>
                         <ul class="list-unstyled">
-                            <li>
-                                <a href="#" class="d-block mb-3">
-                                    <h6 class="text-dark">How to Improve Your Reading Habits</h6>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#" class="d-block mb-3">
-                                    <h6 class="text-dark">Top 10 Books You Must Read This Year</h6>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#" class="d-block mb-3">
-                                    <h6 class="text-dark">The Impact of Reading on Mental Health</h6>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#" class="d-block mb-3">
-                                    <h6 class="text-dark">Why Children Should Read More Books</h6>
-                                </a>
-                            </li>
+                            <li><a href="booksGenere/literature.html">Literature</a></li>
+                            <li><a href="booksGenere/science.html">Science</a></li>
+                            <li><a href="booksGenere/history.html">History</a></li>
+                            <li><a href="booksGenere/children.html">Children</a></li>
+                            <li><a href="booksGenere/mentality.html">Mentality</a></li>
+                            <li><a href="booksGenere/economy.html">Economy</a></li>
+                            <li><a href="booksGenere/lifeskills.html">Life Skills</a></li>
+                            <li><a href="booksGenere/sport.html">Sport</a></li>
+                        </ul>
+                    </div>
+                </div>
+
+                <!-- Recent Posts -->
+                <div class="card mb-4">
+                    <div class="card-body">
+                        <h4>Recent Posts</h4>
+                        <ul class="list-unstyled">
+                            <li><a href="blogPost.html">How to Improve Your Reading Habits</a></li>
+                            <li><a href="blogPost.html">The Benefits of Science Books</a></li>
+                            <li><a href="blogPost.html">Exploring History Books</a></li>
+                        </ul>
+                    </div>
+                </div>
+
+                <!-- Archives -->
+                <div class="card mb-4">
+                    <div class="card-body">
+                        <h4>Archives</h4>
+                        <ul class="list-unstyled">
+                            <li><a href="#">January 2024</a></li>
+                            <li><a href="#">February 2024</a></li>
+                            <li><a href="#">March 2024</a></li>
                         </ul>
                     </div>
                 </div>
@@ -233,93 +234,90 @@
     </div>
 
 
-<!-- Footer -->
-<footer style="background-color: #343a40; color: #fff; padding: 20px; margin-top: 30px; font-size: 16px;">
-    <div 
-        style="display: flex; flex-wrap: wrap; justify-content: space-between; max-width: 1200px; margin: 0 auto; gap: 20px;" data-aos="fade-in"
-    >
-        <!-- Company Section -->
-        <div style="flex: 1; min-width: 200px; max-width: 100%;">
-            <h3 style="color: #3fa1f1; font-size: 20px; margin-bottom: 20px;">Company</h3>
-            <ul style="list-style: none; padding: 0; line-height: 1.8;">
-                <li>
-                    <a href="about.html" style="text-decoration: none; color: #aaa;">
-                        <i class="fas fa-info-circle" style="margin-right: 8px;"></i> About Us
-                    </a>
-                </li>
-                <li>
-                    <a href="contact.html" style="text-decoration: none; color: #aaa;">
-                        <i class="fas fa-phone-alt" style="margin-right: 8px;"></i> Contact Us
-                    </a>
-                </li>
-                <li>
-                    <a href="#" style="text-decoration: none; color: #aaa;">
-                        <i class="fas fa-calendar-check" style="margin-right: 8px;"></i> Reservation
-                    </a>
-                </li>
-                <li>
-                    <a href="policy.html" style="text-decoration: none; color: #aaa;">
-                        <i class="fas fa-shield-alt" style="margin-right: 8px;"></i> Privacy Policy
-                    </a>
-                </li>
-                <li>
-                    <a href="policy.html" style="text-decoration: none; color: #aaa;">
-                        <i class="fas fa-file-contract" style="margin-right: 8px;"></i> Terms & Conditions
-                    </a>
-                </li>
-            </ul>
-        </div>            
-
-        <!-- Contact Section -->
-        <div style="flex: 1; min-width: 200px; max-width: 100%;">
-            <h3 style="color: #3fa1f1; font-size: 20px; margin-bottom: 20px;">Contact</h3>
-            <p style="margin: 10px 0; color: #bbb;">
-                <i class="fas fa-map-marker-alt" style="margin-right: 8px;"></i> VQCR+GP6, khu phố 6, Linh Trung, Thủ Đức, Hồ Chí Minh, Việt Nam
-            </p>
-            <p style="margin: 10px 0; color: #bbb;">
-                <i class="fas fa-phone-alt" style="margin-right: 8px;"></i> 028 3896 6780
-            </p>
-            <p style="margin: 10px 0; color: #bbb;">
-                <i class="fas fa-envelope" style="margin-right: 8px;"></i> vp@hcmuaf.edu.vn
-            </p>
-            <div style="margin-top: 15px; display: flex; gap: 15px;">
-                <a href="#" style="color: #fff; font-size: 20px;"><i class="fab fa-twitter"></i></a>
-                <a href="#" style="color: #fff; font-size: 20px;"><i class="fab fa-facebook"></i></a>
-                <a href="#" style="color: #fff; font-size: 20px;"><i class="fab fa-youtube"></i></a>
-                <a href="#" style="color: #fff; font-size: 20px;"><i class="fab fa-linkedin"></i></a>
+    <!-- Footer -->
+    <footer style="background-color: #343a40; color: #fff; padding: 20px; margin-top: 30px; font-size: 16px;">
+        <div style="display: flex; flex-wrap: wrap; justify-content: space-between; max-width: 1200px; margin: 0 auto; gap: 20px;"
+            data-aos="fade-in">
+            <!-- Company Section -->
+            <div style="flex: 1; min-width: 200px; max-width: 100%;">
+                <h3 style="color: #3fa1f1; font-size: 20px; margin-bottom: 20px;">Company</h3>
+                <ul style="list-style: none; padding: 0; line-height: 1.8;">
+                    <li>
+                        <a href="about.html" style="text-decoration: none; color: #aaa;">
+                            <i class="fas fa-info-circle" style="margin-right: 8px;"></i> About Us
+                        </a>
+                    </li>
+                    <li>
+                        <a href="contact.html" style="text-decoration: none; color: #aaa;">
+                            <i class="fas fa-phone-alt" style="margin-right: 8px;"></i> Contact Us
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" style="text-decoration: none; color: #aaa;">
+                            <i class="fas fa-calendar-check" style="margin-right: 8px;"></i> Reservation
+                        </a>
+                    </li>
+                    <li>
+                        <a href="policy.html" style="text-decoration: none; color: #aaa;">
+                            <i class="fas fa-shield-alt" style="margin-right: 8px;"></i> Privacy Policy
+                        </a>
+                    </li>
+                    <li>
+                        <a href="policy.html" style="text-decoration: none; color: #aaa;">
+                            <i class="fas fa-file-contract" style="margin-right: 8px;"></i> Terms & Conditions
+                        </a>
+                    </li>
+                </ul>
             </div>
-        </div>            
 
-        <!-- Opening Section -->
-        <div style="flex: 1; min-width: 200px; max-width: 100%;">
-            <h3 style="color: #3fa1f1; font-size: 20px; margin-bottom: 20px;">Opening</h3>
-            <p style="margin: 10px 0; color: #bbb;">
-                <i class="fas fa-clock" style="margin-right: 8px;"></i> Mon - Fri: 7:00 AM - 5:30 PM
-            </p>
-            <p style="margin: 10px 0; color: #bbb;">
-                <i class="fas fa-clock" style="margin-right: 8px;"></i> Sunday: Closed
-            </p>
-        </div>            
+            <!-- Contact Section -->
+            <div style="flex: 1; min-width: 200px; max-width: 100%;">
+                <h3 style="color: #3fa1f1; font-size: 20px; margin-bottom: 20px;">Contact</h3>
+                <p style="margin: 10px 0; color: #bbb;">
+                    <i class="fas fa-map-marker-alt" style="margin-right: 8px;"></i> VQCR+GP6, khu phố 6, Linh Trung,
+                    Thủ Đức, Hồ Chí Minh, Việt Nam
+                </p>
+                <p style="margin: 10px 0; color: #bbb;">
+                    <i class="fas fa-phone-alt" style="margin-right: 8px;"></i> 028 3896 6780
+                </p>
+                <p style="margin: 10px 0; color: #bbb;">
+                    <i class="fas fa-envelope" style="margin-right: 8px;"></i> vp@hcmuaf.edu.vn
+                </p>
+                <div style="margin-top: 15px; display: flex; gap: 15px;">
+                    <a href="#" style="color: #fff; font-size: 20px;"><i class="fab fa-twitter"></i></a>
+                    <a href="#" style="color: #fff; font-size: 20px;"><i class="fab fa-facebook"></i></a>
+                    <a href="#" style="color: #fff; font-size: 20px;"><i class="fab fa-youtube"></i></a>
+                    <a href="#" style="color: #fff; font-size: 20px;"><i class="fab fa-linkedin"></i></a>
+                </div>
+            </div>
 
-        <!-- Newsletter Section -->
-        <div style="flex: 1; min-width: 200px; max-width: 100%;">
-            <h3 style="color: #3fa1f1; font-size: 20px; margin-bottom: 20px;">If you're interested</h3>
-            <p style="margin-bottom: 15px; color: #bbb;">Sign up for updates and promotions.</p>
-            <form class="newsletter-form">
-                <input 
-                    type="email" 
-                    placeholder="Enter your email" 
-                    class="newsletter-input" 
-                    required>
-                <button class="newsletter-button">Sign Up</button>
-            </form>
+            <!-- Opening Section -->
+            <div style="flex: 1; min-width: 200px; max-width: 100%;">
+                <h3 style="color: #3fa1f1; font-size: 20px; margin-bottom: 20px;">Opening</h3>
+                <p style="margin: 10px 0; color: #bbb;">
+                    <i class="fas fa-clock" style="margin-right: 8px;"></i> Mon - Fri: 7:00 AM - 5:30 PM
+                </p>
+                <p style="margin: 10px 0; color: #bbb;">
+                    <i class="fas fa-clock" style="margin-right: 8px;"></i> Sunday: Closed
+                </p>
+            </div>
+
+            <!-- Newsletter Section -->
+            <div style="flex: 1; min-width: 200px; max-width: 100%;">
+                <h3 style="color: #3fa1f1; font-size: 20px; margin-bottom: 20px;">If you're interested</h3>
+                <p style="margin-bottom: 15px; color: #bbb;">Sign up for updates and promotions.</p>
+                <form class="newsletter-form">
+                    <input type="email" placeholder="Enter your email" class="newsletter-input" required>
+                    <button class="newsletter-button">Sign Up</button>
+                </form>
+            </div>
         </div>
-    </div>
 
-    <div style="text-align: center; margin-top: 10px; color: #888; font-size: 14px;" data-aos="fade-in" data-aos-delay="1000">
-        © 2024 Group2. All rights reserved.
-    </div>
-</footer>  
+        <div style="text-align: center; margin-top: 10px; color: #888; font-size: 14px;" data-aos="fade-in"
+            data-aos-delay="1000">
+            © 2024 Group2. All rights reserved.
+        </div>
+    </footer>
     <!-- Bootstrap JS and dependencies -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
