--- a/admin.html
+++ b/admin.html
@@ -27,8 +27,8 @@
     <a href="listcategory.html">Category</a>
     <a href="locationlibrary.html">Location of Libraries</a>
     <a href="listBook.html">List Book</a>
-    <a href="#borrowed-books">Books Borrowed</a>
-    <a href="booksRetuned.html">Books Returned</a>
+    <a href="booksBorroweb.html">Books Borrowed</a>
+    <a href="booksReturned.html">Books Returned</a>
     <a href="login.html">Logout</a>
   </div>
 
