--- a/booksBorrowed.html
+++ b/booksBorrowed.html
@@ -13,9 +13,9 @@
 <body>
 
   <!-- Header -->
-  <div class="header">
+  <div class="header d-flex justify-content-between py-3">
     <div class="left">
-      <h5>Admin Page</h5>
+      <h5>Trang Admin</h5>
     </div>
     <div class="right">
       <h5>Hello Admin</h5>
@@ -23,14 +23,14 @@
   </div>
 
   <!-- Sidebar -->
-  <div class="sidebar">
-    <h3 class="text-center py-3">Admin Panel</h3>
-    <a href="admin.html">Control Table</a>
-    <a href="listcategory.html">Categories</a>
-    <a href="locationlibrary.html">Library Locations</a>
-    <a href="listBook.html">Book List</a>
-    <a href="#borrowed-books" class="active">Books Borrowed</a>
-    <a href="#borrowers">Books Returned</a>
+  <div class="sidebar d-flex flex-column justify-content-between py-4 px-3">
+    <h3 class="text-center mb-4">Admin Panel</h3>
+    <a href="admin.html" >Control Table</a>
+    <a href="listcategory.html">Category</a>
+    <a href="locationlibrary.html">Location of Libraries</a>
+    <a href="listBook.html">List Book</a>
+    <a href="booksBorrowed.html" class="active">Books Borrowed</a>
+    <a href="booksRetuned.html">Books Returned</a>
     <a href="login.html">Logout</a>
   </div>
 
