--- a/booksGenere/literature.html
+++ b/booksGenere/literature.html
@@ -28,7 +28,7 @@
                     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR35FLvdopkSZYZeJwoz3rPfYLfr0lnjGcRhQ&s" 
                          alt="Library Logo" 
                          style="height: 50px; width: auto; border-radius: 50%;">
-                    <p style="color: white; font-size: 40px; margin: 0; margin-left: 10px;">Group 2</p>
+                    <p style="color: white; font-size: 40px; margin: 0; margin-left: 10px;">Library Management</p>
                 </a>
                 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
