--- a/listBook.html
+++ b/listBook.html
@@ -30,7 +30,7 @@
     <a href="listcategory.html">Category</a>
     <a href="locationlibrary.html">Location of Libraries</a>
     <a href="listBook.html" class="active">List Book</a>
-    <a href="#borrowed-books">Books Borrowed</a>
+    <a href="booksBorrowed.html">Books Borrowed</a>
     <a href="booksRetuned.html">Books Returned</a>
     <a href="login.html">Logout</a>
   </div>
