--- a/listcategory.html
+++ b/listcategory.html
@@ -30,7 +30,7 @@
     <a href="listcategory.html" class="active">Category</a>
     <a href="locationlibrary.html">Location of Libraries</a>
     <a href="listBook.html">List Book</a>
-    <a href="#borrowed-books">Books Borrowed</a>
+    <a href="booksBorrowed.html">Books Borrowed</a>
     <a href="booksRetuned.html">Books Returned</a>
     <a href="login.html">Logout</a>
   </div>
