--- a/index.html
+++ b/index.html
@@ -514,25 +514,8 @@
     </div>
 
     <!-- Bootstrap JS and dependencies -->
-    <script>
-        // Bắt sự kiện khi nhấn nút View
-        document.querySelectorAll('.btn-details').forEach(button => {
-            button.addEventListener('click', function () {
-                // Lấy dữ liệu từ các thuộc tính data-
-                const title = this.getAttribute('data-title');
-                const author = this.getAttribute('data-author');
-                const year = this.getAttribute('data-year');
-                const img = this.getAttribute('data-img');
-                const status = this.getAttribute('data-status');
-
-                // Gán dữ liệu vào modal
-                document.getElementById('modal-book-title').innerText = title;
-                document.getElementById('modal-book-author').innerText = author;
-                document.getElementById('modal-book-year').innerText = year;
-                document.getElementById('modal-book-status').innerText = status;
-                document.getElementById('modal-book-img').src = img;
-            });
-        });
+    <script src="js/index.js">
+        
     </script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
