--- a/admin.html
+++ b/admin.html
@@ -35,9 +35,11 @@
   <!-- Content -->
   <div class="content d-flex flex-column justify-content-start">
     
-    <!-- Breadcrumb -->
-    <nav class="breadcrumb py-3">
-      <span>Admin</span> / <span>Control Table</span>
+    <nav aria-label="breadcrumb">
+      <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="admin.html">Admin</a></li>
+        <li class="breadcrumb-item active" aria-current="page">Control Table</li>
+      </ol>
     </nav>
 
     <!-- Stats - Left Side (Books Borrowed and Returned) -->
