--- a/blog.html
+++ b/blog.html
@@ -65,7 +65,12 @@
             </div>
         </div>
     </nav>
-
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+          <li class="breadcrumb-item active" aria-current="page">Blog</li>
+        </ol>
+      </nav>
     <div class="container mt-5">
         <div class="row">
             <!-- Main Blog Content Area -->
