--- a/booksBorrowed.html
+++ b/booksBorrowed.html
@@ -33,13 +33,19 @@
     <a href="booksRetuned.html">Books Returned</a>
     <a href="login.html">Logout</a>
   </div>
-
+ 
   <!-- Content -->
   <div class="content">
-
+    <nav aria-label="breadcrumb" style="background-color: white;">
+      <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="admin.html">Admin</a></li>
+        <li class="breadcrumb-item active" aria-current="page">Books Borrowed</li>
+      </ol>
+    </nav>
     <!-- Borrower List Table -->
     <div class="container mt-4">
-      <h1>Borrower List</h1>
+      
+      <h1>Books Borrowed</h1>
       <table id="borrowerTable" class="display" style="width:100%">
         <thead>
           <tr>
