--- a/booksGenere/economy.html
+++ b/booksGenere/economy.html
@@ -70,7 +70,12 @@
             </div>
         </div>
     </nav> 
-
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item"><a href="../index.html">Home</a></li>
+          <li class="breadcrumb-item active" aria-current="page">Economy</li>
+        </ol>
+      </nav>
     <div class="section-header">
         <h1>Featured Books</h1>
     </div>
