--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,12 @@
             </div>
         </div>
     </nav>  
-
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+          <li class="breadcrumb-item active" aria-current="page">Contact</li>
+        </ol>
+      </nav>
     <!-- Page Heading -->
     <h1 style="text-align: center; color: #333; margin-top: 50px;">Contact Us</h1>
     <p style="text-align: center; color: #555; margin-bottom: 40px;">We would love to hear from you! Please reach out using the form below, or visit us at our office.</p>
