--- a/policy.html
+++ b/policy.html
@@ -67,7 +67,12 @@
             </div>
         </div>
     </nav>
-
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+          <li class="breadcrumb-item active" aria-current="page">Policy</li>
+        </ol>
+      </nav>
     <!-- Policy Section -->
     <div class="container mt-4">
         <div class="policy-section">
