--- a/about.html
+++ b/about.html
@@ -66,7 +66,12 @@
             </div>
         </div>
     </nav> 
-
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+          <li class="breadcrumb-item active" aria-current="page">About</li>
+        </ol>
+      </nav>
     <section class="team-section">
         <h2>Our Team</h2>
         <div class="team-container">
