--- a/booksRetuned.html
+++ b/booksRetuned.html
@@ -7,6 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/listBook.css">
   <link rel="stylesheet" href="https://cdn.datatables.net/1.13.1/css/jquery.dataTables.min.css">
+ 
 </head>
 <body>
   <!-- Header -->
@@ -34,6 +35,12 @@
   <!-- Wrapper -->
   <div class="wrapper d-flex">
     <div class="content flex-grow-1">
+      <nav aria-label="breadcrumb" >
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item"><a href="admin.html">Admin</a></li>
+          <li class="breadcrumb-item active" aria-current="page">Books Borrowed</li>
+        </ol>
+      </nav>
       <h1>Books Returned</h1>
       <!-- Bộ lọc -->
       <div class="filters mb-3">
@@ -277,6 +284,7 @@
       </table>
     </div>
   </div>
+ 
     <!-- Modal Edit Books Returned -->
   <div class="modal fade" id="editBookReturnedModal" tabindex="-1" aria-labelledby="editBookReturnedModalLabel" aria-hidden="true">
     <div class="modal-dialog">
