--- a/listcategory.html
+++ b/listcategory.html
@@ -4,12 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Admin Book Management</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+ 
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <link rel="stylesheet" href="css/listcategory.css">
+  
   <link rel="stylesheet" href="https://cdn.datatables.net/1.13.1/css/jquery.dataTables.min.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.datatables.net/1.13.1/js/jquery.dataTables.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/listcategory.css">
 </head>
 <body>
 
@@ -37,9 +39,18 @@
 
 <!-- Wrapper -->
 <div class="wrapper d-flex">
+ 
     <!-- Main Content -->
     <div class="content flex-grow-1">
-      <h1>Category List</h1>
+      
+      <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item"><a href="admin.html">Admin</a></li>
+          <li class="breadcrumb-item active" aria-current="page">Category</li>
+        </ol>
+      </nav>
+  
+      <h1>Category</h1>
       <button id="addBookBtn" class="btn btn-primary mb-3">Add Category</button>
       <table id="bookTable" class="display">
         <thead>
