--- a/locationlibrary.html
+++ b/locationlibrary.html
@@ -4,12 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Admin Book Management</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <link rel="stylesheet" href="css/locationlibrary.css">
+  
   <link rel="stylesheet" href="https://cdn.datatables.net/1.13.1/css/jquery.dataTables.min.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.datatables.net/1.13.1/js/jquery.dataTables.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/locationlibrary.css">
 </head>
 <body>
 
@@ -28,7 +30,7 @@
     <h3 class="text-center mb-4">Admin Panel</h3>
     <a href="admin.html" >Control Table</a>
     <a href="listcategory.html">Category</a>
-    <a href="locationlibrary.html" class="active">Location of Libraries</a>
+    <a href="locationlibrary.html" class="active">Location</a>
     <a href="listBook.html">List Book</a>
     <a href="booksBorrowed.html">Books Borrowed</a>
     <a href="booksRetuned.html">Books Returned</a>
@@ -39,7 +41,13 @@
 <div class="wrapper d-flex">
     <!-- Main Content -->
     <div class="content flex-grow-1">
-      <h1>Location Of library</h1>
+      <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item"><a href="admin.html">Admin</a></li>
+          <li class="breadcrumb-item active" aria-current="page">Location</li>
+        </ol>
+      </nav>
+      <h1>Location</h1>
       <button id="addBookBtn" class="btn btn-primary mb-3">Add Location</button>
       <table id="bookTable" class="display">
         <thead>
