--- a/admin.html
+++ b/admin.html
@@ -25,8 +25,8 @@
     <h3 class="text-center mb-4">Admin Panel</h3>
     <a href="admin.html" class="active">Control Table</a>
     <a href="listcategory.html">Category</a>
-    <a href="locationlibrary.html">Location of Libraries</a>
-    <a href="listBook.html">List Book</a>
+    <a href="locationlibrary.html" >Location</a>
+    <a href="listBook.html">Books</a>
     <a href="booksBorrowed.html">Books Borrowed</a>
     <a href="booksRetuned.html">Books Returned</a>
     <a href="login.html">Logout</a>
