--- a/listBook.html
+++ b/listBook.html
@@ -28,9 +28,9 @@
     <h3 class="text-center mb-4">Admin Panel</h3>
     <a href="admin.html" >Control Table</a>
     <a href="listcategory.html">Category</a>
-    <a href="locationlibrary.html">Location of Libraries</a>
+    <a href="locationlibrary.html" >Location</a>
     <a href="listBook.html" class="active">Books</a>
-    <a href="booksBorrowed.html">Books Borrowed</a>
+    <a href="booksBorrowed.html" >Books Borrowed</a>
     <a href="booksRetuned.html">Books Returned</a>
     <a href="login.html">Logout</a>
   </div>
