--- a/locationlibrary.html
+++ b/locationlibrary.html
@@ -31,7 +31,7 @@
     <a href="admin.html" >Control Table</a>
     <a href="listcategory.html">Category</a>
     <a href="locationlibrary.html" class="active">Location</a>
-    <a href="listBook.html">List Book</a>
+    <a href="listBook.html">Books</a>
     <a href="booksBorrowed.html">Books Borrowed</a>
     <a href="booksRetuned.html">Books Returned</a>
     <a href="login.html">Logout</a>
