--- a/booksBorrowed.html
+++ b/booksBorrowed.html
@@ -6,9 +6,10 @@
   <title>Admin Book Management</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <link rel="stylesheet" href="css/admin.css">
+  
   <!-- DataTables CSS -->
   <link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.min.css">
+  <link rel="stylesheet" href="css/admin.css">
 </head>
 <body>
 
@@ -27,8 +28,8 @@
     <h3 class="text-center mb-4">Admin Panel</h3>
     <a href="admin.html" >Control Table</a>
     <a href="listcategory.html">Category</a>
-    <a href="locationlibrary.html">Location of Libraries</a>
-    <a href="listBook.html">List Book</a>
+    <a href="locationlibrary.html" >Location</a>
+    <a href="listBook.html">Books</a>
     <a href="booksBorrowed.html" class="active">Books Borrowed</a>
     <a href="booksRetuned.html">Books Returned</a>
     <a href="login.html">Logout</a>
