--- a/booksRetuned.html
+++ b/booksRetuned.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Books Returned</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/listBook.css">
   <link rel="stylesheet" href="https://cdn.datatables.net/1.13.1/css/jquery.dataTables.min.css">
+  <link rel="stylesheet" href="css/listBook.css">
  
 </head>
 <body>
@@ -25,9 +25,9 @@
     <h3 class="text-center mb-4">Admin Panel</h3>
     <a href="admin.html" >Control Table</a>
     <a href="listcategory.html">Category</a>
-    <a href="locationlibrary.html">Location of Libraries</a>
-    <a href="listBook.html">List Book</a>
-    <a href="booksBorrowed.html">Books Borrowed</a>
+    <a href="locationlibrary.html" >Location</a>
+    <a href="listBook.html" >Books</a>
+    <a href="booksBorrowed.html" >Books Borrowed</a>
     <a href="booksRetuned.html" class="active">Books Returned</a>
     <a href="login.html">Logout</a>
   </div>
@@ -38,7 +38,7 @@
       <nav aria-label="breadcrumb" >
         <ol class="breadcrumb">
           <li class="breadcrumb-item"><a href="admin.html">Admin</a></li>
-          <li class="breadcrumb-item active" aria-current="page">Books Borrowed</li>
+          <li class="breadcrumb-item active" aria-current="page">Books Returned</li>
         </ol>
       </nav>
       <h1>Books Returned</h1>
