update lai hinh anh

--- a/index.html
+++ b/index.html
@@ -13,35 +13,7 @@
     <link href="https://cdn.jsdelivr.net/npm/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/index.css">
-    <style>
-        /* Styling for circle button */
-        .d-flex.justify-content-start {
-            position: fixed;
-            bottom: 20px;
-            /* Adjust as needed */
-            left: 20px;
-            /* Adjust as needed */
-            z-index: 1050;
-        }
-
-        .btn-circle {
-            width: 50px;
-            height: 50px;
-            border-radius: 50%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background-color: #007bff;
-            color: white;
-            border: none;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            transition: background-color 0.3s ease;
-        }
-
-        .btn-circle:hover {
-            background-color: #0056b3;
-        }
-    </style>
+   
 
 </head>
 
@@ -128,65 +100,65 @@
         <div class="row mt-3">
             <div class="col-md-3">
                 <div class="card">
-                    <img src="https://images-na.ssl-images-amazon.com/images/I/81P9B8sY4AL._AC_UL127_SR127,127_.jpg"
+                    <img src="https://images-na.ssl-images-amazon.com/images/I/51+ROKEYviL._AC_UL254_SR254,254_.jpg"
                         class="card-img-top" alt="Book 1">
                     <div class="card-body">
-                        <h5 class="card-title">How to catch a Turkey</h5>
-                        <p class="book-author">Author: Andy Elkerton</p>
-                        <p class="book-year">Year: 2020</p>
+                        <h5 class="card-title">Dad, I Want to Hear Your Story: A Father’s Guided Journal To Share His Life & His Love (Hear Your Story Books)</h5>
+                        <p class="book-author">Author: E.O. Wilson</p>
+                        <p class="book-year">Year: 2010</p>
                         <p class="book-status" data-status="Available">Status: Available</p>
-                        <a href="#" class="btn btn-outline-primary btn-details" data-title="How to catch a Turkey"
-                            data-author="Andy Elkerton" data-year="2020"
-                            data-img="https://images-na.ssl-images-amazon.com/images/I/81P9B8sY4AL._AC_UL127_SR127,127_.jpg"
+                        <a href="#" class="btn btn-outline-primary btn-details" data-title="Dad, I Want to Hear Your Story: A Father’s Guided Journal To Share His Life & His Love (Hear Your Story Books)"
+                            data-author="E.O. Wilson" data-year="2010"
+                            data-img="https://images-na.ssl-images-amazon.com/images/I/51+ROKEYviL._AC_UL254_SR254,254_.jpg"
                             data-status="Available" data-bs-toggle="modal" data-bs-target="#bookModal">View</a>
                     </div>
                 </div>
             </div>
             <div class="col-md-3">
                 <div class="card">
-                    <img src="https://images-na.ssl-images-amazon.com/images/I/7187im2CwUL._AC_UL254_SR254,254_.jpg"
+                    <img src="https://images-na.ssl-images-amazon.com/images/I/91I1KDnK1kL._AC_UL254_SR254,254_.jpg"
                         class="card-img-top" alt="Book 2">
                     <div class="card-body">
-                        <h5 class="card-title">The War on Warriors: Behind the Betrayal of the Men Who Keep Us</h5>
-                        <p class="book-author">Author: Pete Hegseth</p>
-                        <p class="book-year">Year: 2019</p>
+                        <h5 class="card-title">The Let Them Theory: A Life-Changing Tool That Millions of People Can't Stop Talking About </h5>
+                        <p class="book-author">Author: Carolyn Wheater</p>
+                        <p class="book-year">Year: 2016</p>
                         <p class="book-status" data-status="Available">Status: Available</p>
                         <a href="#" class="btn btn-outline-primary btn-details"
-                            data-title="The War on Warriors: Behind the Betrayal of the Men Who Keep Us"
-                            data-author="Pete Hegseth" data-year="2019"
-                            data-img="https://images-na.ssl-images-amazon.com/images/I/7187im2CwUL._AC_UL254_SR254,254_.jpg"
+                            data-title="The Let Them Theory: A Life-Changing Tool That Millions of People Can't Stop Talking About "
+                            data-author="Carolyn Wheater" data-year="2016"
+                            data-img="https://images-na.ssl-images-amazon.com/images/I/91I1KDnK1kL._AC_UL254_SR254,254_.jpg"
                             data-status="Available" data-bs-toggle="modal" data-bs-target="#bookModal">View</a>
                     </div>
                 </div>
             </div>
             <div class="col-md-3">
                 <div class="card">
-                    <img src="https://images-na.ssl-images-amazon.com/images/I/41e+dwz5W5L._AC_UL127_SR127,127_.jpg"
+                    <img src="https://images-na.ssl-images-amazon.com/images/I/71sOqrd6JHL._AC_UL254_SR254,254_.jpg"
                         class="card-img-top" alt="Book 3">
                     <div class="card-body">
-                        <h5 class="card-title">Melania</h5>
-                        <p class="book-author">Author: Melania Trump</p>
-                        <p class="book-year">Year: 2021</p>
+                        <h5 class="card-title">Mom, I Want to Hear Your Story: A Mother’s Guided Journal To Share Her Life & Her Love (Hear Your Story Books)</h5>
+                        <p class="book-author">Author: National Geographic Kids</p>
+                        <p class="book-year">Year: 2018</p>
                         <p class="book-status" data-status="Borrowed">Status: Borrowed</p>
-                        <a href="#" class="btn btn-outline-primary btn-details" data-title="Melania"
-                            data-author="Melania Trump" data-year="2021"
-                            data-img="https://images-na.ssl-images-amazon.com/images/I/41e+dwz5W5L._AC_UL127_SR127,127_.jpg"
+                        <a href="#" class="btn btn-outline-primary btn-details" data-title="Mom, I Want to Hear Your Story: A Mother’s Guided Journal To Share Her Life & Her Love (Hear Your Story Books)"
+                            data-author="National Geographic Kids" data-year="2018"
+                            data-img="https://images-na.ssl-images-amazon.com/images/I/71sOqrd6JHL._AC_UL254_SR254,254_.jpg"
                             data-status="Borrowed" data-bs-toggle="modal" data-bs-target="#bookModal">View</a>
                     </div>
                 </div>
             </div>
             <div class="col-md-3">
                 <div class="card">
-                    <img src="https://images-na.ssl-images-amazon.com/images/I/91TBEE7LPsL._AC_UL254_SR254,254_.jpg"
+                    <img src="https://images-na.ssl-images-amazon.com/images/I/613znXUaEWL._AC_UL254_SR254,254_.jpg"
                         class="card-img-top" alt="Book 4">
                     <div class="card-body">
-                        <h5 class="card-title">How to Catch a Reindeer</h5>
-                        <p class="book-author">Author: Alice Walstead</p>
-                        <p class="book-year">Year: 2018</p>
+                        <h5 class="card-title">How To Draw Everything: 300 Drawings of Cute Stuff, Animals, Food, Gifts, and other Amazing Things | Book For Kids</h5>
+                        <p class="book-author">Author: E.O. Wilson</p>
+                        <p class="book-year">Year: 2010</p>
                         <p class="book-status" data-status="Available">Status: Available</p>
-                        <a href="#" class="btn btn-outline-primary btn-details" data-title="How to Catch a Reindeer"
-                            data-author="Alice Walstead" data-year="2018"
-                            data-img="https://images-na.ssl-images-amazon.com/images/I/91TBEE7LPsL._AC_UL254_SR254,254_.jpg"
+                        <a href="#" class="btn btn-outline-primary btn-details" data-title="How To Draw Everything: 300 Drawings of Cute Stuff, Animals, Food, Gifts, and other Amazing Things | Book For Kids"
+                            data-author="E.O. Wilson" data-year="2010"
+                            data-img="https://images-na.ssl-images-amazon.com/images/I/613znXUaEWL._AC_UL254_SR254,254_.jpg"
                             data-status="Available" data-bs-toggle="modal" data-bs-target="#bookModal">View</a>
                     </div>
                 </div>
@@ -361,33 +333,33 @@
             </div>
             <div class="col-md-3">
                 <div class="card">
-                    <img src="https://images-na.ssl-images-amazon.com/images/I/81PNtM1NfxL._AC_UL254_SR254,254_.jpg"
+                    <img src="https://images-na.ssl-images-amazon.com/images/I/81AgoOPzO6L._AC_UL254_SR254,254_.jpg"
                         class="card-img-top" alt="Book 11">
                     <div class="card-body">
-                        <h5 class="card-title">Little Blue Truck's Christmas: A Christmas Holiday Book for Kids</h5>
+                        <h5 class="card-title">The Big Book of Silly Jokes for Kids</h5>
                         <p>Author: Alice Schertle</p>
                         <p>Year: 2011</p>
                         <p class="book-status" data-status="Available">Status: Available</p>
                         <a href="#" class="btn btn-outline-primary btn-details"
-                            data-title="Little Blue Truck's Christmas: A Christmas Holiday Book for Kids"
+                            data-title="The Big Book of Silly Jokes for Kids"
                             data-author="Alice Schertle" data-year="2011" data-status="Available"
-                            data-img="https://images-na.ssl-images-amazon.com/images/I/81PNtM1NfxL._AC_UL254_SR254,254_.jpg"
+                            data-img="https://images-na.ssl-images-amazon.com/images/I/81AgoOPzO6L._AC_UL254_SR254,254_.jpg"
                             data-bs-toggle="modal" data-bs-target="#bookModal">View</a>
                     </div>
                 </div>
             </div>
             <div class="col-md-3">
                 <div class="card">
-                    <img src="https://images-na.ssl-images-amazon.com/images/I/71QManc1wDL._AC_UL254_SR254,254_.jpg"
+                    <img src="https://images-na.ssl-images-amazon.com/images/I/718SstStV3L._AC_UL254_SR254,254_.jpg"
                         class="card-img-top" alt="Book 12">
                     <div class="card-body">
-                        <h5 class="card-title">Little Corner</h5>
+                        <h5 class="card-title">Interesting Facts For Curious Minds: 1572 Random But Mind-Blowing Facts About History, Science, Pop Culture And Everything In Between</h5>
                         <p>Author: Coco Wyo</p>
                         <p>Year: 2010</p>
                         <p class="book-status" data-status="Available">Status: Available</p>
-                        <a href="#" class="btn btn-outline-primary btn-details" data-title="Little Corner"
+                        <a href="#" class="btn btn-outline-primary btn-details" data-title="Interesting Facts For Curious Minds: 1572 Random But Mind-Blowing Facts About History, Science, Pop Culture And Everything In Between"
                             data-author="Coco Wyo" data-year="2010" data-status="Available"
-                            data-img="https://images-na.ssl-images-amazon.com/images/I/71QManc1wDL._AC_UL254_SR254,254_.jpg"
+                            data-img="https://images-na.ssl-images-amazon.com/images/I/718SstStV3L._AC_UL254_SR254,254_.jpg"
                             data-bs-toggle="modal" data-bs-target="#bookModal">View</a>
                     </div>
                 </div>
