--- a/booksBorrowed.html
+++ b/booksBorrowed.html
@@ -33,6 +33,7 @@
     <a href="booksBorrowed.html" class="active">Books Borrowed</a>
     <a href="booksRetuned.html">Books Returned</a>
     <a href="login.html">Logout</a>
+    <a href="accountManagement.html">Account Management</a>
   </div>
  
   <!-- Content -->
