--- a/styleguide.html
+++ b/styleguide.html
@@ -74,7 +74,7 @@
             <li class="nav-item"><a class="nav-link active" href="#">Typography</a></li>
             <li class="nav-item"><a class="nav-link" href="#">Directory</a></li>
             <li class="nav-item"><a class="nav-link" href="#">Layout</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Color</a></li>
+            <li class="nav-item"><a class="nav-link" href="styleguidecolor.html">Color</a></li>
             <li class="nav-item"><a class="nav-link" href="#">Image</a></li>
         </ul>
     </div>
