--- a/login.html
+++ b/login.html
@@ -22,11 +22,11 @@
                 <form id="loginForm">
                     <div class="mb-3">
                         <label for="email" class="form-label">Email</label>
-                        <input type="email" id="email" class="form-control" placeholder="e.g., user@example.com" required>
+                        <input type="email" id="email" value="user@example.com" class="form-control" placeholder="e.g., user@example.com" required>
                     </div>
                     <div class="mb-3">
                         <label for="password" class="form-label">Password</label>
-                        <input type="password" id="password" class="form-control" placeholder="e.g., Password123!" required>
+                        <input type="password" value="123" id="password" class="form-control" placeholder="e.g., Password123!" required>
                     </div>
                     <button type="submit" class="btn btn-primary w-100">Login</button>
                     <div class="text-center mt-3">
@@ -46,11 +46,11 @@
                     </div>
                     <div class="mb-3">
                         <label for="email-register" class="form-label">Email</label>
-                        <input type="email" id="email-register" class="form-control" placeholder="e.g., user@example.com" required>
+                        <input type="email"  id="email-register" class="form-control" placeholder="e.g., user@example.com" required>
                     </div>
                     <div class="mb-3">
                         <label for="password-register" class="form-label">Password</label>
-                        <input type="password" id="password-register" class="form-control" placeholder="e.g., Password123!" required>
+                        <input type="password"  id="password-register" class="form-control" placeholder="e.g., Password123!" required>
                     </div>
                     <button type="submit" class="btn btn-success w-100">Register</button>
                     <div class="text-center mt-3">
