--- a/layout.html
+++ b/layout.html
@@ -49,7 +49,7 @@
                     <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
                     <li class="nav-item"><a class="nav-link" href="policy.html">Policy</a></li>
                     <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="styleguide.html">Style Guide</a></li>
+                    <li class="nav-item"><a class="nav-link " href="styleguide.html">Style Guide</a></li>
                 </ul>
                 <div class="search-bar ms-3 d-flex">
                     <input type="text" class="form-control" placeholder="Search book, author...">
@@ -65,10 +65,10 @@
 
     <div class="small-menu-container bg-color d-flex justify-content-center">
         <ul class="nav">
-            <li class="nav-item"><a class="nav-link" href="#">Typography</a></li>
+            <li class="nav-item"><a class="nav-link" href="styleguide.html">Typography</a></li>
             <li class="nav-item"><a class="nav-link" href="#">Directory</a></li>
-            <li class="nav-item"><a class="nav-link active" href="#">Layout</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Color</a></li>
+            <li class="nav-item"><a class="nav-link active" href="layout.html">Layout</a></li>
+            <li class="nav-item"><a class="nav-link" href="styleguidecolor.html">Color</a></li>
             <li class="nav-item"><a class="nav-link" href="#">Image</a></li>
         </ul>
     </div>
