--- a/styleguide.html
+++ b/styleguide.html
@@ -71,9 +71,9 @@
     </nav>
     <div class="small-menu-container bg-color d-flex justify-content-center">
         <ul class="nav">
-            <li class="nav-item"><a class="nav-link active" href="#">Typography</a></li>
+            <li class="nav-item"><a class="nav-link active" href="styleguide.html">Typography</a></li>
             <li class="nav-item"><a class="nav-link" href="#">Directory</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Layout</a></li>
+            <li class="nav-item"><a class="nav-link" href="layout.html">Layout</a></li>
             <li class="nav-item"><a class="nav-link" href="styleguidecolor.html">Color</a></li>
             <li class="nav-item"><a class="nav-link" href="#">Image</a></li>
         </ul>
