update image page

--- a/color.html
+++ b/color.html
@@ -92,7 +92,7 @@
             <li class="nav-item"><a class="nav-link" href="#">Directory</a></li>
             <li class="nav-item"><a class="nav-link" href="layout.html">Layout</a></li>
             <li class="nav-item"><a class="nav-link active" href="color.html">Color</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Image</a></li>
+            <li class="nav-item"><a class="nav-link" href="image.html">Image</a></li>
         </ul>
     </div>
 
